# llm-reinforce-learning

./: .gitignore  .gitmodules  README.md  pyproject.toml
docs/train/: p1_training_model.ipynb
docs/tutorial/: golf_env.ipynb  gym_sb3_sample.ipynb  p3_test_env.ipynb  p5_gym_sb3_sample.ipynb  p6_model_trainer.ipynb  test_env.ipynb  vh_communication.ipynb  vh_envdata.ipynb
docs/tutorial/assets/: p6_model_trainer.ipynb
src/llm_mcts/: vh_task_generator.py
src/llm_planner/: manager.py
src/sb3vh/: env_graph_enum.py  reference.py  train.py  vh_env.py
src/training/: __init__.py  eval_callback.py  evaluator.py  model.py  model_train.py  model_train_example.py  reference.py  skill_train.py  trainer.py
src/vh_env/: __init__.py  cross_env.py  env_graph_enum.py  food_gather.py  food_gather_env.py
src/vh_util/: create_env.py  env_graph.py
test/: test_evaluator.py  test_llm_manager.py  test_model_trainer.py  test_script.py  test_tmp.py  test_vh_gather.py  test_vh_gather_env.py  test_vh_gather_env_v2.py  test_vh_usage.py  tmp.py
vh/docker/: Dockerfile
vh/virtualhome/simulation/unity_simulator/: communication.py
