[tool.poetry]
name = "llm-reinforce-learning"
version = "0.1.0"
description = ""
authors = ["yuloxx <2152813@tongji.edu.cn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
virtualhome = {path = "vh", develop = true}
numpy = "<2.0"
gymnasium = "^1.0.0"
stable-baselines3 = "^2.4.0"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
openai = "^1.58.1"
bidict = "^0.23.1"
rich = "^13.9.4"
transitions = "^0.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
